# mcp-coze

./: .gitignore  API_REFERENCE.md  API_upload.md  BOT_API_USAGE_GUIDE.md  CHANGELOG.md  CHAT_API_4000_ERROR_FIX.md  CHAT_API_FIX.md  CHAT_ENHANCEMENT_FEATURES.md  CHAT_USAGE_GUIDE.md  COMPILATION_FIXES_SUMMARY.md  COZE_API_DOCUMENTATION.md  Cargo.toml  ESSENTIAL_TOOLS_GUIDE.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE_API_GUIDE.md  KNOWLEDGE_BASE_CREATE_IMPLEMENTATION.md  Makefile  README.md  RELEASE_NOTES.md  RELEASE_v0.2.2.md  RMCP_USAGE_DOCUMENTATION.md  SECURITY_AUDIT.md  TECHNICAL_REVIEW.md  UPGRADE_SUMMARY.md  USAGE.md  VERSION_MANAGEMENT.md  VERSION_RELEASE_SUCCESS.md  build.ps1  chat.md  debug_chat_json.rs  debug_request.rs  rmcp_code_examples.md  rmcp_usage_research.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
improvements/: api_client_improvements.rs  config_improvements.rs  logging_improvements.rs  testing_improvements.rs
scripts/: release.bat  release.ps1  release.sh
src/: knowledge.rs  lib.rs  main.rs  models.rs
src/api/: bot_models.rs  chat_models.rs  client.rs  endpoints.rs  error.rs  knowledge_models.rs  mod.rs
src/tools/: config_tool.rs  context.rs  coze_tools.rs  mod.rs
tests/: README.md  api_datasets_v1.rs  api_format_fix_verification.rs  api_upload_test.rs  bot_models_test.rs  chat_integration_test.rs  chat_models_test.rs  coze_tools_test.rs  create_dataset_test.rs  debug_chat_format.rs  format_validation.rs  integration_test_fixed.rs  random_user_id_test.rs  upload_dry_run.rs  upload_request_shape.rs
(+2 files in other folders)
