[package]
name = "coze-mcp-server"
version = "0.2.2"
edition = "2021"
authors = ["Coze MCP Team"]
description = "Coze Platform MCP Server Implementation"
license = "MIT"

[dependencies]
rmcp = { version = "0.5.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
urlencoding = "2"
base64 = "0.22.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
